# execlave-python-sdk

./: .env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY.md  pyproject.toml  test_run.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
execlave/: __init__.py  agent.py  client.py  connectors.py  errors.py  otel.py  trace.py
execlave/instrumentation/: __init__.py  events.py  spans.py
execlave/integrations/: __init__.py  autogen.py  crewai.py  langchain.py  llamaindex.py  mcp.py  openai_agents.py  openai_chat.py
tests/: conftest.py  helpers.py  test_agent.py  test_client.py  test_connectors.py  test_enforcement.py  test_errors.py  test_instrumentation_spans.py  test_trace.py
tests/integrations/: test_autogen.py  test_crewai.py  test_langchain.py  test_llamaindex.py  test_mcp.py  test_openai_agents.py  test_openai_chat.py
